--- a/src/components/componentcss/Sightseeing.module.css
+++ b/src/components/componentcss/Sightseeing.module.css
@@ -1,84 +1,52 @@
- .card {
-     border-radius: 10px;
-     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-     transition: transform 0.3s ease;
-     overflow: hidden;
-     margin: 5px;
-     position: relative;
-     width: 380px;
-     height: 250px;
-     flex: 0 0 auto;
- }
+.card {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    overflow: hidden;
+    margin: 5px;
+    position: relative;
+    width: 420px;
+    height: 300px;
+    flex: 0 0 auto;
+}
 
- .card .cardImage {
-     object-fit: cover;
-     height: 100%;
-     width: 100%;
- }
-
- .card .cardText {
-     position: absolute;
-     bottom: 0;
-     width: 100%;
-     text-align: center;
-     color: white;
-     background: linear-gradient(0deg, rgb(0, 0, 0), rgba(0, 0, 0, 0));
-     padding: 5px;
-     font-weight: lighter;
-     font-size: 13px;
-
- }
+.card .cardImage {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    transition: .2s;
+}
 
 
- .cardcontainer {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     overflow: scroll;
-     -ms-overflow-style: none;
-     scrollbar-width: none;
-     background-color: #f8f9fa;
- }
 
- @media (max-width: 768px) {
-     .card {
-         width: 300px;
-     }
+.card .cardImage:hover {
+    transform: scale(1.1);
+}
 
-     .heroheading p {
-         font-size: 16px;
-     }
- }
+.card .cardText {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    color: white;
+    background: linear-gradient(0deg, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+    padding: 5px;
+    font-size: 15px;
+}
 
- .modal {
-     position: fixed;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     background-color: rgba(0, 0, 0, 0.7);
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     z-index: 1000;
- }
 
- .modalContent {
-     position: relative;
-     padding: 20px;
- }
+.cardcontainer {
+    display: flex;
+    align-items: center;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
 
- .modalImage {
-     max-width: 90%;
-     max-height: 90%;
-     object-fit: contain;
- }
+@media (max-width: 768px) {
+    .card {
+        width: 300px;
+    }
 
- .cardImage {
-     cursor: pointer;
-     transition: .2s;
- }
 
- .cardImage:hover {
-     transform: scale(1.1);
- }
+}
