--- a/src/pages/pagecss/About.module.css
+++ b/src/pages/pagecss/About.module.css
@@ -26,14 +26,8 @@
  }
 
  .secondpart .container {
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: center;
-     overflow: scroll;
-     -ms-overflow-style: none;
-     scrollbar-width: none;
-     width: 100%;
-     padding: 10px 2px;
+     display: grid;
+     grid-template-columns: repeat(3, 1fr);
  }
 
  .secondpart .container .box {
@@ -41,7 +35,6 @@
      flex-direction: column;
      justify-content: center;
      align-items: center;
-     flex: 0 0 auto;
      max-width: 18rem;
      padding: 8px 10px;
      margin: 5px 5px;
